<resources>
    <string name="app_name">FooD Bit</string>
    <string name="app_logo">App Logo</string>
    <string name="food_bit">FooD BiT</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_account">Get Started! Sign Up</string>
    <string name="preference_file_name">Restaurant Preferences</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">Name (Min. 3 characters)</string>
    <string name="user_email">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="get_started">Get Started</string>
    <string name="recover_password">Recover Password</string>
    <string name="forgot_heading">Enter Registered Email and Mobile Number To Get OTP</string>
    <string name="next">NEXT</string>
    <string name="email_address">Email Address</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_heading">Enter Received OTP Below:</string>
    <string name="otp_text">OTP (4 characters)</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faq">FAQs</string>
    <string name="logout">Log Out</string>
    <string name="user_names">User Name</string>
    <string name="mobile">9876543210</string>
    <string name="email">abc@company.com</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delhi">DELHI</string>
    <string name="name_company_com">name@company.com</string>
    <string name="_91_1112223334">+91-1112223334</string>
    <string name="userimage">userimage</string>
    <string name="username">Username</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="_4_1">4.1</string>
    <string name="_200">200</string>
    <string name="name_of_restaurant">Name Of Restaurant</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="can_t_find_restaurant_with_that_name">Can\'t Find Restaurant with that Name.</string>
    <string name="cost_low_to_high">Cost(Low to High)</string>
    <string name="cost_high_to_low">Cost(High to Low)</string>
    <string name="rating">Rating</string>
    <string name="sort">sort</string>
    <string name="no_favorites">You Don\'t Have Any Favourites</string>
    <string name="choose_from_menu_listed_below">Choose from Menu Listed below:</string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="_1">1</string>
    <string name="name_of_the_dish">Name Of the Dish</string>
    <string name="rs_299">Rs. 299</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="foodbit">FooD biT</string>
    <string name="your_order_has_been_successfully_placed">Your Order Has Been Successfully Placed</string>
    <string name="ok">OK</string>
    <string name="name_of_dish">Name Of The Dish</string>
    <string name="rs_200">Rs. 200</string>
    <string name="you_have_not_placed_any_orders">You have not placed any Orders.</string>
    <string name="your_previous_orders_are_listed_below">Your Previous Orders Are Listed Below:</string>
    <string name="date">25/07/2020</string>
    <string name="add">Add</string>
</resources>