<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            />

        <item
            android:id="@+id/myProfile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_user"/>

        <item
            android:id="@+id/favourite"
            android:title="@string/favourite"
            android:icon="@drawable/ic_favourite"/>

        <item
            android:id="@+id/order"
            android:title="@string/order_history"
            android:icon="@drawable/ic_history"/>

        <item
            android:id="@+id/faq"
            android:title="@string/faq"
            android:icon="@drawable/ic_faq"/>

        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"
            android:iconTint="@color/colorPrimary"/>

    </group>
</menu>