<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bgd"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="85dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_app"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_logo" />

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_bit"
            android:layout_toEndOf="@id/imgLogo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlHeader"
        android:hint="@string/mobile_number"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="15dp"
        android:drawableTint="@color/colorPrimary"
        android:textColorHint="@color/txtColorHint"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#f5f5f5"
        android:maxLength="10"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobileNumber"
        android:hint="@string/password"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="15dp"
        android:drawableTint="@color/colorPrimary"
        android:textColorHint="@color/txtColorHint"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword"
        android:background="#f5f5f5"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:background="@drawable/custom_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:padding="15dp"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:text="@string/forgot_password"
        android:textColor="@color/txtColorHint"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/register_account"/>

</RelativeLayout>