<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bgd">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="85dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_app"
            android:layout_marginStart="15dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_logo" />

        <TextView
            android:id="@+id/txtHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp"
            android:layout_toEndOf="@id/imgLogo"
            android:textColor="#ffffff"
            android:layout_centerVertical="true"
            android:textSize="22sp"
            android:layout_marginStart="20dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/txtForgotHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_heading"
        android:layout_below="@id/rlHeader"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/btnPrimary"/>

    <EditText
        android:id="@+id/etOtpNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtForgotHeading"
        android:hint="@string/otp_text"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="15dp"
        android:drawableTint="@color/colorPrimary"
        android:textColorHint="@color/txtColorHint"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#f5f5f5"
        android:maxLength="4"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etOtpNumber"
        android:hint="@string/new_password"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="15dp"
        android:drawableTint="@color/colorPrimary"
        android:textColorHint="@color/txtColorHint"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword"
        android:background="#f5f5f5"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNewPassword"
        android:hint="@string/confirm_password"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="15dp"
        android:drawableTint="@color/colorPrimary"
        android:textColorHint="@color/txtColorHint"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword"
        android:background="#f5f5f5"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirmPassword"
        android:background="@drawable/custom_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:padding="15dp"
        android:text="@string/submit"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"/>

</RelativeLayout>