<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="30dp"
    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/imgUserImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_app"
        android:layout_marginEnd="25dp"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_names"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_toEndOf="@id/imgUserImage"
        />
    <TextView
        android:id="@+id/txtUserMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/imgUserImage"
        android:layout_below="@id/txtUserName"
        android:textColor="#ffffff"
        />

    <TextView
        android:id="@+id/txtUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/imgUserImage"
        android:layout_below="@id/txtUserMobileNumber"
        android:textColor="#ffffff"
        />
</RelativeLayout>