<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardCornerRadius="5dp"
    android:background="#ffffff"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/llContent1"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:weightSum="8">

        <TextView

            android:text="@string/_1"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:id="@+id/txtSno"
            android:layout_width="0dp"
            android:layout_height="30dp"
            />

        <RelativeLayout
            android:layout_weight="5.2"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtDishName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_dish"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="@color/txtHeading"/>
            <TextView
                android:id="@+id/txtDishPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/rs_299"
                android:padding="8dp"
                android:layout_below="@id/txtDishName"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1.8"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnAddToCart"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:text="@string/add"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/custom_button"
                android:visibility="visible" />

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>