<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_app"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/foodbit"/>

    <ImageView
        android:id="@+id/imgSuccess"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_success"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/txtSuccessMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_order_has_been_successfully_placed"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:layout_below="@id/imgSuccess"
        />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_white"
        android:layout_below="@id/txtSuccessMsg"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:text="@string/ok"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="18sp"/>

</RelativeLayout>
